# Otaku-360-DE-Project

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
dags/: cat_facts_ingestion_dag.py
