[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["Kareem"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <=3.12.4"
pyarrow = "^17.0.0"
pandas = "^2.1.2"
plotly = "^5.22.0"
pendulum = "3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
